# qualeval

./: README.md  pyproject.toml
impressions/: __init__.py  cli.py
impressions/core/: __init__.py
tests/: test_cli.py
