[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "impressions"
version = "0.1.0"
description = "Evaluation harness for measuring AI-generated code."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Joseph R. Labs" },
]
keywords = ["ai", "evaluation", "code", "testing"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.scripts]
impressions = "impressions.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
